# j2etool

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml
.github/workflows/: release.yml
j2etool/: core.py  disassembler.py  main.py
output/: j2etool.yml
output/smali/: a.smali  aow2.smali  b.smali  c.smali  e.smali  f.smali  i.smali  k.smali  l.smali
test_output/: j2etool.yml  test.jad
test_output/res/: sn8p.props
test_output/smali/: a.smali  c.smali  d.smali  f.smali  g.smali  h.smali  i.smali  j.smali  l.smali  m.smali
tests/: test_integration.py
