[project]
name = "j2etool"
version = "0.1.0"
description = "A python tool to decompile J2ME applications into Smali-like format."
dependencies = [
    "javatools",
]

[project.scripts]
j2etool = "j2etool.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
